fix spinner z-index

--- a/src/scss/components/_content.scss
+++ b/src/scss/components/_content.scss
@@ -177,7 +177,7 @@
 		left: 50%;
 		top: 8.5%;
 		transform: translate(-50%, 0%);
-		z-index: 6;
+		z-index: 3;
 	}
 
 	&__button {
